--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNOWY - THE AVALANCHE ALPHA</title>
+    <title>$SNOWY</title>
     <link rel="icon" type="image/jpeg" href="snowy.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -386,4 +386,5 @@
         }, 3000);
     </script>
 </body>
+
 </html>
